--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
-  <p>Nothing to see here - open your console!</p>
+<body id="mainBody">
+
   
   <script src="build/bundle.js"></script>
 </body>
